cc_library(
    name = "unique_lock",
    hdrs = ["unique_lock.h"],
    deps = [
        "@//rwlock:rw_lock",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared_lock",
    hdrs = ["shared_lock.h"],
    deps = [
        "@//rwlock:rw_lock",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "rw_lock",
    hdrs = ["rw_lock.h"],
    visibility = ["//visibility:public"],
)
